<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/head_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_5"
        android:orientation="horizontal"
        android:padding="@dimen/padding_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content" 
            android:text="@string/title_header_nomor" />


        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_10" 
            android:maxLines="1"
            android:text="@string/title_header_team" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">
            <TextView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_10" 
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:text="@string/title_header_win" />

            <TextView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_10"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:text="@string/title_header_draw" />

            <TextView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_10"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:text="@string/title_header_lose" />

            <TextView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_10"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:text="@string/title_header_pts" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>