<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/margin_16"
    android:layout_marginBottom="@dimen/margin_16"
    android:orientation="horizontal"
    app:layout_constraintTop_toBottomOf="@+id/search"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/size_130"
        android:layout_height="@dimen/size_190"
        app:cardBackgroundColor="@color/green_300"
        app:cardCornerRadius="@dimen/size_10"
        android:layout_marginStart="@dimen/margin_16">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/size_70"
                android:layout_height="@dimen/size_70"
                android:src="@drawable/ic_football_ball"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_livescores"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/size_30"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/size_130"
        android:layout_height="@dimen/size_190"
        app:cardBackgroundColor="@color/blue_300"
        app:cardCornerRadius="@dimen/size_10"
        android:layout_marginStart="@dimen/margin_16">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/size_70"
                android:layout_height="@dimen/size_70"
                android:src="@drawable/ic_analysis"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_prediction"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/size_30"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/size_130"
        android:layout_height="@dimen/size_190"
        app:cardBackgroundColor="@color/purple_300"
        app:cardCornerRadius="@dimen/size_10"
        android:layout_marginStart="@dimen/margin_16">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/size_70"
                android:layout_height="@dimen/size_70"
                android:src="@drawable/ic_trophy"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_topcores"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/size_30"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/size_130"
        android:layout_height="@dimen/size_190"
        app:cardBackgroundColor="@color/orange_300"
        app:cardCornerRadius="@dimen/size_10"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/size_70"
                android:layout_height="@dimen/size_70"
                android:src="@drawable/ic_statistics"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_statistic"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/size_30"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>