<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.standing.StandingFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/shp_white_top_16dp">

                <View
                    android:id="@+id/topDecor"
                    android:layout_width="32dp"
                    android:layout_height="4dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/shp_circle_grey" />
            </RelativeLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <LinearLayout
                        android:id="@+id/search"
                        android:layout_width="0dp"
                        android:layout_marginStart="@dimen/margin_16"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:background="@drawable/shp_background_search"
                        android:orientation="horizontal"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/imgFavorite"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="@dimen/size_38"
                            android:layout_height="@dimen/size_38"
                            android:layout_marginStart="4dp"
                            android:padding="10dp"
                            android:src="@drawable/ic_baseline_search_24" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_38"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:text="@string/title_search"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imgFavorite"
                        android:layout_width="@dimen/size_38"
                        android:layout_height="@dimen/size_38"
                        android:background="@drawable/shp_circle_primary"
                        android:padding="@dimen/padding_8"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:src="@drawable/ic_baseline_favorite_24"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_16"
                        app:layout_constraintTop_toBottomOf="@+id/search">

                        <LinearLayout
                            android:id="@+id/head_table"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/grey_5"
                            android:orientation="horizontal"
                            android:padding="@dimen/padding_16"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:layout_width="20dp"
                                android:layout_height="wrap_content"
                                android:text="@string/title_header_nomor" />

                            <TextView
                                android:layout_width="160dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/padding_10"
                                android:maxLines="1"
                                android:text="@string/title_header_team" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="end">

                                <TextView
                                    android:layout_width="25dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/padding_10"
                                    android:gravity="center_horizontal"
                                    android:maxLines="1"
                                    android:text="@string/title_header_win" />

                                <TextView
                                    android:layout_width="25dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/padding_10"
                                    android:gravity="center_horizontal"
                                    android:maxLines="1"
                                    android:text="@string/title_header_draw" />

                                <TextView
                                    android:layout_width="25dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/padding_10"
                                    android:gravity="center_horizontal"
                                    android:maxLines="1"
                                    android:text="@string/title_header_lose" />

                                <TextView
                                    android:layout_width="25dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/padding_10"
                                    android:gravity="center_horizontal"
                                    android:maxLines="1"
                                    android:text="@string/title_header_pts" />
                            </LinearLayout>

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvStanding"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottieLoading"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        app:layout_constraintBottom_toBottomOf="@+id/rvStanding"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="false"
                        app:lottie_rawRes="@raw/loading" />

                    <include
                        android:id="@+id/view_error"
                        layout="@layout/view_error"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>