<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/shp_white_top_16dp">

                <View
                    android:id="@+id/topDecor"
                    android:layout_width="32dp"
                    android:layout_height="4dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/shp_circle_grey" />
            </RelativeLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white" >

                    <LinearLayout
                        android:id="@+id/search"
                        android:layout_width="0dp"
                        android:layout_marginStart="@dimen/margin_16"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:background="@drawable/shp_background_search"
                        android:orientation="horizontal"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/imgFavorite"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="@dimen/size_38"
                            android:layout_height="@dimen/size_38"
                            android:layout_marginStart="4dp"
                            android:padding="10dp"
                            android:src="@drawable/ic_baseline_search_24" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_38"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:text="@string/title_search"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imgFavorite"
                        android:layout_width="@dimen/size_38"
                        android:layout_height="@dimen/size_38"
                        android:background="@drawable/shp_circle_primary"
                        android:padding="@dimen/padding_8"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:src="@drawable/ic_baseline_favorite_24"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <HorizontalScrollView
                        android:id="@+id/layoutFitur"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/search">

                        <include
                            layout="@layout/card_home_features"/>

                    </HorizontalScrollView>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layoutCalender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/layoutFitur">

                        <androidx.core.widget.NestedScrollView
                            android:id="@+id/horizontalLeague"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:fillViewport="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvDate">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginStart="@dimen/margin_16"
                                android:layout_marginBottom="@dimen/margin_8"
                                android:paddingEnd="@dimen/margin_16"
                                android:layout_marginTop="@dimen/margin_16"
                                android:paddingBottom="@dimen/padding_8"
                                android:gravity="center_vertical">

                                <ImageView
                                    android:layout_width="@dimen/size_24"
                                    android:layout_height="@dimen/size_24"
                                    android:src="@drawable/ic_football_ball"
                                    tools:ignore="RtlSymmetry" />

                                <androidx.recyclerview.widget.RecyclerView
                                    android:id="@+id/rvLeague"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/margin_16"/>

                            </LinearLayout>

                        </androidx.core.widget.NestedScrollView>

                        <TextView
                            android:id="@+id/tvDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/title_last_match"
                            android:textColor="@color/colorText"
                            android:textSize="18sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvMatch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/layoutCalender"/>

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="@dimen/size_50"
                        android:layout_height="@dimen/size_50"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/layoutCalender" />

                    <TextView
                        android:id="@+id/tv_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/something_wrong"
                        android:textSize="18sp"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="@+id/layoutCalender"
                        app:layout_constraintStart_toStartOf="@+id/layoutCalender"
                        app:layout_constraintTop_toBottomOf="@+id/layoutCalender" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</FrameLayout>